--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,8 @@ html, body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  user-select: none;
 }
 
 body::-webkit-scrollbar {
