--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,10 @@ html, body {
   user-select: none;
 }
 
+#root {
+  overflow: hidden;
+}
+
 /**::-webkit-scrollbar,
 .the-scroll-area__needScroll::-webkit-scrollbar {
   -webkit-appearance: none;
